# Dreamliner

./: .gitignore  README.md  pyproject.toml
src/dreamliner/configs/: default.yaml
src/dreamliner/data/: flightgear.xml
src/dreamliner/envs/: __init__.py  dreamer_adapter.py  stall_recovery_env.py
src/dreamliner/evaluation/: _loader.py  evaluate.py  play.py
src/dreamliner/training/: train.py
src/dreamliner/utils/: flightgear.py  jsbsim_utils.py
