[project]
name = "dreamliner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "jsbsim>=1.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchrl>=0.11.1",
    "tqdm>=4.67.3",
]

[project.scripts]
train      = "dreamliner.training.train:main"
play       = "dreamliner.evaluation.play:main"
evaluate   = "dreamliner.evaluation.evaluate:main"
flightgear = "dreamliner.utils.flightgear:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamliner"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
